--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
-          python -m pip install --upgrade pip setuptools build wheel pylint pytest pytest-cov
+          if [ -f requirements_build.txt ]; then pip install -r requirements_build.txt; fi
+      - name: Install code dependencies
+        run: |
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with pylint
         run: |
           pylint -E src/pygpsclient
+      - name: Security vulnerability analysis with bandit
+        run: |
+          python bandit -c pyproject.toml -r -lll .
       - name: Test with pytest
         run: |
           pytest
-      # pyupio/safety action currently uses deprecated set-output command
-      # - uses: pyupio/safety@2.3.5
-      #   with:
-      #     api-key: ${{ secrets.SAFETY_API_KEY }}
