--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,9 +54,9 @@ classifiers = [
     ]
 
 dependencies = [
-    "pygnssutils>=1.0.6",
     "requests>=2.28.0",
     "Pillow>=9.0.0",
+    "pygnssutils>=1.0.6",
     "pyserial>=3.5",
     "pyspartn>=0.1.6",
 ]
@@ -72,13 +72,22 @@ changelog = "https://github.com/semuconsulting/PyGPSClient/blob/master/RELEASE_N
 
 [project.optional-dependencies]
 test = [
-    "black >= 23.1",
-    "pylint >= 2.17",
-    "pytest >= 7.2",
-    "pytest-cov >= 4.0",
-    "Sphinx >= 6.1.3",
-    "sphinx-rtd-theme >= 1.2.0",
+    "bandit>=1.7",
+    "black>=23.1",
+    "build>=0.10",
+    "certifi>=2022.12",
+    "pip>=23",
+    "pylint>=2.17",
+    "pytest>=7.2",
+    "pytest-cov>=4.0",
+    "setuptools>=66.0",
+    "Sphinx>=5.3",
+    "sphinx-rtd-theme>=1.2.0",
+    "wheel>=0.40"
 ]
+[tool.bandit]
+exclude_dirs = ["docs", "examples", "tests"]
+skips = []
 
 [tool.pylint]
 jobs = 0
@@ -88,6 +97,7 @@ py-version = "3.7"
 fail-under = "9.8"
 fail-on = "E,F"
 clear-cache-post-run = "y"
+good-names="i,j,x,y"
 disable = """
     raw-checker-failed,
     bad-inline-option,
