--- a/requirements_build.txt
+++ b/requirements_build.txt
@@ -1,3 +1,4 @@
+bandit>=1.7
 black>=23.1
 build>=0.10
 certifi>=2022.12
@@ -6,6 +7,6 @@ pylint>=2.17
 pytest>=7.2
 pytest-cov>=4.0
 setuptools>=66.0
-Sphinx>=6.1.3
+Sphinx>=5.3
 sphinx-rtd-theme>=1.2.0
 wheel>=0.40
