--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,21 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install build dependencies
+      - name: Install deploy dependencies
         run: |
-          if [ -f requirements_build.txt ]; then pip install -r requirements_build.txt; fi
+          pip install .[deploy]
+      - name: Install test dependencies
+        run: |
+          pip install .[test]
       - name: Install code dependencies
         run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install .
       - name: Lint with pylint
         run: |
           pylint -E src/pygpsclient
       - name: Security vulnerability analysis with bandit
         run: |
-          python bandit -c pyproject.toml -r -lll .
+          bandit -c pyproject.toml -r -lll .
       - name: Test with pytest
         run: |
           pytest
