--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Update Toolchain",
+            "label": "Install Deploy Dependencies",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -15,14 +15,12 @@
                 "pip",
                 "install",
                 "--upgrade",
-                "--upgrade",
-                "-r",
-                "${workspaceFolder}/requirements_build.txt",
+                ".[deploy]"
             ],
             "problemMatcher": []
         },
         {
-            "label": "Update Dependencies",
+            "label": "Install Test Dependencies",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -30,12 +28,21 @@
                 "pip",
                 "install",
                 "--upgrade",
-                "-r",
-                "${workspaceFolder}/requirements.txt",
+                ".[test]"
             ],
-            "options": {
-                "cwd": "src"
-            },
+            "problemMatcher": []
+        },
+        {
+            "label": "Install Dependencies",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pip",
+                "install",
+                "--upgrade",
+                "."
+            ],
             "problemMatcher": []
         },
         {
@@ -220,11 +227,12 @@
             "dependsOrder": "sequence",
             "dependsOn": [
                 "Clean",
-                "Update Toolchain",
-                "Update Dependencies",
+                "Install Deploy Dependencies",
+                "Install Test Dependencies",
+                "Install Dependencies",
+                "Security",
                 "Format",
                 "Pylint",
-                "Security",
                 "Test",
                 "Build",
                 "Sphinx HTML"
