--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,5 @@
 name: pygpsclient
 
-env: 
-  MODULE: sandpit
-
 on:
   push:
     branches:
@@ -32,7 +29,7 @@ jobs:
           pip install .
       - name: Lint with pylint
         run: |
-          pylint -E src/$MODULE
+          pylint -E src
       - name: Security vulnerability analysis with bandit
         run: |
           bandit -c pyproject.toml -r -lll .
