--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "none",
     "editor.formatOnSave": true,
     // NB: for Windows, assumes symlink has been set python3<==>python
     "python.defaultInterpreterPath": "python3",
@@ -10,4 +10,7 @@
     "modulename": "pygpsclient",
     "distname": "pygpsclient",
     "moduleversion": "1.3.30",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
 }
