--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,12 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "pygpsclient"
-authors = [
-    {name = "semuadmin", email = "semuadmin@semuconsulting.com"},
-]
-maintainers = [
-  {name = "semuadmin", email = "semuadmin@semuconsulting.com"}
-]
+authors = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
+maintainers = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
 description = "GNSS Diagnostic and UBX Configuration GUI Application"
-version = "1.3.30"
-license = {file = "LICENSE"}
-keywords= [
+version = "1.4.0"
+license = { file = "LICENSE" }
+keywords = [
     "PyGPSClient",
     "GNSS",
     "GPS",
@@ -28,7 +24,7 @@ keywords= [
     "RTK",
     "DGPS",
     "u-center",
-    ]
+]
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -51,7 +47,7 @@ classifiers = [
     "Topic :: Utilities",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Scientific/Engineering :: GIS",
-    ]
+]
 
 dependencies = [
     "requests>=2.28.0",
@@ -71,12 +67,7 @@ repository = "https://github.com/semuconsulting/PyGPSClient"
 changelog = "https://github.com/semuconsulting/PyGPSClient/blob/master/RELEASE_NOTES.md"
 
 [project.optional-dependencies]
-deploy = [
-    "build",
-    "pip",
-    "setuptools>=66.0.0",
-    "wheel"
-]
+deploy = ["build", "pip", "setuptools>=66.0.0", "wheel"]
 test = [
     "bandit",
     "black",
@@ -98,7 +89,7 @@ profile = "black"
 
 [tool.bandit]
 exclude_dirs = ["docs", "examples", "tests"]
-skips = ["B104","B318","B408"] # bind 0.0.0.0; minidom
+skips = ["B104", "B318", "B408"]             # bind 0.0.0.0; minidom
 
 [tool.pylint]
 jobs = 0
@@ -108,7 +99,7 @@ py-version = "3.8"
 fail-under = "9.8"
 fail-on = "E,F"
 clear-cache-post-run = "y"
-good-names="i,j,x,y"
+good-names = "i,j,x,y"
 disable = """
     raw-checker-failed,
     bad-inline-option,
