add ntrip authentication kwargs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,7 +51,11 @@
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
-                "pygpsclient"
+                "pygpsclient",
+                "--ntripuser",
+                "semuadmin",
+                "--ntrippassword",
+                "testpassword"
             ],
             "options": {
                 "cwd": "src"
