--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ classifiers = [
 dependencies = [
     "requests>=2.28.0",
     "Pillow>=9.0.0",
-    #"pygnssutils>=1.0.13",
+    "pygnssutils>=1.0.13",
     "pyserial>=3.5",
     "pyspartn>=0.1.10",
 ]
