--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "requests>=2.28.0",
     "Pillow>=9.0.0",
     "pygnssutils>=1.0.17",
+    "pynmeagps>=1.0.33",
     "pyserial>=3.5",
 ]
 
