update spartn decryption args

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
     "editor.formatOnSave": true,
+    "python3.8InterpreterPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8",
     "modulename": "pygpsclient",
     "distname": "pygpsclient",
-    "moduleversion": "1.4.15",
+    "moduleversion": "1.4.16",
 }
