--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -147,6 +147,16 @@
             "problemMatcher": []
         },
         {
+            "label": "Test3.8",
+            "type": "process",
+            "command": "${config:python3.8InterpreterPath}",
+            "args": [
+                "-m",
+                "pytest",
+            ],
+            "problemMatcher": []
+        },
+        {
             "label": "Sphinx",
             "type": "process",
             "command": "sphinx-apidoc",
