--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pygpsclient"
 authors = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
 maintainers = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
 description = "GNSS Diagnostic and UBX Configuration GUI Application"
-version = "1.4.18"
+version = "1.4.19"
 license = { file = "LICENSE" }
 keywords = [
     "PyGPSClient",
@@ -121,7 +121,8 @@ disable = """
     too-few-public-methods,
     too-many-public-methods,
     too-many-locals,
-    invalid-name
+    invalid-name,
+    logging-fstring-interpolation
 """
 
 [tool.pytest.ini_options]
