tweak settings frame

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,9 +26,9 @@
             "args": [
                 "-m",
                 "pygpsclient",
-                "--ntripuser",
+                "--ntripcasteruser",
                 "semuadmin",
-                "--ntrippassword",
+                "--ntripcasterpassword",
                 "testpassword"
             ],
             "options": {
