--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pygpsclient"
 authors = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
 maintainers = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
 description = "GNSS Diagnostic and UBX Configuration GUI Application"
-version = "1.5.1"
+version = "1.5.2"
 license = { file = "LICENSE" }
 keywords = [
     "PyGPSClient",
@@ -53,6 +53,7 @@ dependencies = [
     "requests>=2.28.0",
     "Pillow>=9.0.0",
     "pygnssutils>=1.1.9",
+    "pyubxutils>=1.0.2",
     "pyserial>=3.5",
 ]
 
