--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,9 @@ dependencies = [
     "requests>=2.28.0",
     "Pillow>=9.0.0",
     "pygnssutils>=1.1.13",
-    "pyubxutils>=1.0.2",
+    "pyubx2>=1.2.52",
     "pyserial>=3.5",
+    "pyubxutils>=1.0.3",
 ]
 
 [project.scripts]
