--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -224,7 +224,7 @@
                 "-m",
                 "pip",
                 "install",
-                "--user",
+                //"--user",
                 "--force-reinstall",
                 "*.whl"
             ],
