--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,15 +48,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS",
 ]
 
-dependencies = [
-    "requests>=2.28.0",
-    "Pillow>=9.0.0",
-    "pygnssutils>=1.1.15",
-    "pyubx2>=1.2.55",
-    "pyserial>=3.5",
-    "pyubxutils>=1.0.3",
-    "pysbf2>=1.0.0",
-]
+dependencies = ["requests>=2.28.0", "Pillow>=9.0.0", "pygnssutils>=1.1.16"]
 
 [project.scripts]
 pygpsclient = "pygpsclient.__main__:main"
