update build config

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,18 +14,8 @@
                 "-m",
                 "pip",
                 "install",
-                "--upgrade",
-                "setuptools",
-                "build",
-                "wheel",
-                "black",
-                "pylint",
-                "pytest",
-                "pytest-cov",
-                "isort",
-                "bandit",
-                "Sphinx",
-                "sphinx-rtd-theme"
+                "--group",
+                "deploy",
             ],
             "problemMatcher": []
         },
