--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install deploy dependencies
-        run: |
-          pip install .[deploy]
-      - name: Install test dependencies
-        run: |
-          pip install .[test]
+        run: pip install --group deploy
       - name: Install code dependencies
-        run: |
-          pip install .
+        run: pip install .
       - name: Lint with pylint
-        run: |
-          pylint -E src
+        run: pylint -E src
       - name: Security vulnerability analysis with bandit
-        run: |
-          bandit -c pyproject.toml -r -lll .
+        run: bandit -c pyproject.toml -r -lll .
       - name: Test with pytest
-        run: |
-          pytest
+        run: pytest
