--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,21 +1,29 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    // These Python project tasks assume you have installed and configured: 
-    // build, wheel, black, pylint, pytest, pytest-cov, Sphinx, sphinx-rtd-theme
-    // Use the Update Toolchain task to install the necessary packages.
+    //
+    // This VSCode development workflow is intended to work on
+    // MacOS, Linux and Windows (with Powershell>=5.1).
+    //
+    // Use the Install Deploy Dependencies tasks to install the necessary
+    // build and test packages into the system environment.
+    //
+    // Use the Create Venv task to create a virtual environment in the
+    // designated directory. Select this environment using Select
+    // Interpreter to auto-activate it via New Terminal.
+    //
+    // Remember to include any global Python bin (Scripts on Windows) in PATH.
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Install Dependencies",
+            "label": "Create Venv",
             "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
-                "pip",
-                "install",
-                "--group",
-                "deploy",
+                "venv",
+                "${config:venv}",
+                //"--system-site-packages"
             ],
             "problemMatcher": []
         },
@@ -39,6 +47,19 @@
             "problemMatcher": []
         },
         {
+            "label": "Install Deploy Dependencies",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pip",
+                "install",
+                "--group",
+                "deploy"
+            ],
+            "problemMatcher": []
+        },
+        {
             "label": "Clean",
             "type": "shell",
             "command": "rm",
@@ -48,22 +69,16 @@
                 "dist",
                 "htmlcov",
                 "docs/_build",
-                "${config:modulename}.egg-info"
+                "${config:modulename}.egg-info",
             ],
             "windows": {
-                "command": "Get-ChildItem",
+                "command": "rm",
                 "args": [
+                    "-R",
                     "-Path",
-                    "build\\,",
-                    "dist\\,",
-                    "docs\\_build,",
-                    "${config:modulename}.egg-info",
-                    "-Recurse",
-                    "|",
-                    "Remove-Item",
-                    "-Recurse",
-                    "-Confirm:$false",
-                    "-Force"
+                    "'src/${config:modulename}.egg-info','build','dist','htmlcov','docs/_build'",
+                    "-ErrorAction",
+                    "SilentlyContinue" // doesn't work! - stops on exit code 1 anyway
                 ]
             },
             "options": {
@@ -116,10 +131,23 @@
                 "-c",
                 "pyproject.toml",
                 "-r",
-                "--exit-zero",
                 "."
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Test",
+            "type": "process",
+            "command": "${config:python.defaultInterpreterPath}",
+            "args": [
+                "-m",
+                "pytest"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
         },
         {
             "label": "Build",
@@ -130,23 +158,22 @@
                 "build",
                 ".",
                 "--wheel",
-                "--sdist"
+                "--sdist",
             ],
             "problemMatcher": [],
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "Clean",
+                "Security",
+                "Sort Imports",
+                "Format",
+                "Pylint",
+                "Test",
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
             }
-        },
-        {
-            "label": "Test",
-            "type": "process",
-            "command": "${config:python.defaultInterpreterPath}",
-            "args": [
-                "-m",
-                "pytest"
-            ],
-            "problemMatcher": []
         },
         {
             "label": "Sphinx",
@@ -183,7 +210,7 @@
             "problemMatcher": []
         },
         {
-            "label": "Sphinx Deploy to S3",
+            "label": "Sphinx Deploy to S3", // needs AWS credentials
             "type": "process",
             "command": "aws",
             "args": [
@@ -200,48 +227,28 @@
             "problemMatcher": []
         },
         {
-            "label": "Install Wheel",
-            "type": "shell",
+            "label": "Install Locally",
+            "type": "process",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
                 "-m",
                 "pip",
                 "install",
-                "--user",
+                "--upgrade",
                 "--force-reinstall",
-                "*.whl"
+                "--find-links=${workspaceFolder}/dist",
+                "${workspaceFolderBasename}",
+                // "--target",
+                // "${config:venv}/Lib/site-packages"
             ],
             "options": {
                 "cwd": "dist"
             },
-            "problemMatcher": []
-        },
-        {
-            "label": "Install Locally",
-            "type": "shell",
-            "command": "${config:python.defaultInterpreterPath}",
-            "args": [
-                "-m",
-                "pip",
-                "install",
-                //"--user",
-                "--force-reinstall",
-                "*.whl"
-            ],
             "dependsOrder": "sequence",
             "dependsOn": [
-                "Clean",
-                "Security",
-                "Sort Imports",
-                "Format",
-                "Pylint",
-                "Test",
                 "Build",
                 "Sphinx HTML"
             ],
-            "options": {
-                "cwd": "dist"
-            },
             "problemMatcher": []
         }
     ]
