--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.testing.pytestEnabled": true,
     "python.terminal.activateEnvironment": true,
     "editor.formatOnSave": true,
-    "modulename": "${workspaceFolderBasename}",
+    "modulename": "pygpsclient", // "${workspaceFolderBasename}",
     "distname": "${workspaceFolderBasename}",
     //"venv": "${env:UserProfile}/pygpsclient",
     "venv": "${env:HOME}/pygpsclient",
