--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,11 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS",
 ]
 
-dependencies = ["requests>=2.28.0", "Pillow>=9.0.0", "pygnssutils>=1.1.18"]
+dependencies = [
+    "requests>=2.28.0", 
+    "Pillow>=9.0.0", 
+    "pygnssutils>=1.1.20"
+]
 
 [project.scripts]
 pygpsclient = "pygpsclient.__main__:main"
