add Canvas subclasses

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,32 @@
-.DS_Store
-.dropbox
-.project
 .coverage
+.dropbox
+.DS_Store
+.project
 .pydevproject
+.VSCodeCounter
+*.bin
 *.code-workspace
-/.settings
-Pipfile*.*
-/htmlcov
-/build
-/dist
-/references
-/docs/_build
-/examples/temp*
-/examples/pointperfect
-/logs/*.log
-/logs/*.gpx
-/pygpsclient_*
-/pygpsclient-*
-src/pygpsclient.egg*
+*.gpx
+*.pyc
 /__pycache__
 /.dbeaver
-/pygpsclient/__pycache__
-mqapikey
 /.pytest_cache/
+/.settings
+/build
+/dist
+/docs/_build
+/examples/pointperfect
+/examples/temp*
+/htmlcov
+/logs/*.gpx
+/logs/*.log
+/pygpsclient_*
+/pygpsclient-*
+/pygpsclient/__pycache__
+/references
+/wiki
+mqapikey
+Pipfile*.*
 pylint_report.txt
 snapcraft.yaml
-/wiki
-*.pyc
-*.bin
-*.gpx
+src/pygpsclient.egg*
