--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     // Set your workspace default VSCode Python interpreter to
     // this venv, i.e.
     // "${userHome}/pygpsclient/bin/python3" on linux/macos
-    // "${userHome}/pygpsclient/Scripts/python" on windows
+    // "${userHome}/pygpsclient/Scripts/python.exe" on windows
     "python.testing.pytestEnabled": true,
     "python.terminal.activateEnvironment": true,
     "editor.formatOnSave": true,
@@ -22,5 +22,7 @@
     "python.analysis.addHoverSummaries": false,
     "python-envs.defaultEnvManager": "ms-python.python:venv",
     "python-envs.pythonProjects": [],
-    "python.defaultInterpreterPath": "${userHome}/pygpsclient/bin/python3"
+    "python.defaultInterpreterPath": "${userHome}/pygpsclient/bin/python3",
+    //"python.defaultInterpreterPath": "C:/Users/steve/pygpsclient/Scripts/python.exe",
+    "python.testing.unittestEnabled": false
 }
